[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://src/Generator.gd" type="Script" id=2]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ActualScore.gd" type="Script" id=4]
[ext_resource path="res://src/DifficultyLevel.gd" type="Script" id=5]
[ext_resource path="res://src/Star.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/GameOver.gd" type="Script" id=7]
[ext_resource path="res://src/PauseCountroller.gd" type="Script" id=8]
[ext_resource path="res://src/Paused.gd" type="Script" id=9]

[node name="map" type="Node2D"]

[node name="PauseCountroller" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[node name="Generator" type="Node" parent="."]
script = ExtResource( 2 )

[node name="InitStar" parent="Generator" instance=ExtResource( 6 )]
position = Vector2( 500, 189 )
initiator = true

[node name="Timer" type="Timer" parent="Generator"]
wait_time = 2.0

[node name="Bg" type="ParallaxBackground" parent="."]

[node name="BgSprite" type="Sprite" parent="Bg"]
position = Vector2( 500, 300 )
texture = ExtResource( 1 )

[node name="ActualScore" type="Label" parent="Bg"]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 22.0
rect_scale = Vector2( 1.5, 1.5 )
text = "0"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyLevel" type="Label" parent="Bg"]
margin_left = 910.0
margin_top = 8.0
margin_right = 979.0
margin_bottom = 22.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Level:"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="Bg"]
visible = false
margin_left = 400.0
margin_top = 8.0
margin_right = 507.0
margin_bottom = 22.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.988235, 1, 0.580392, 1 )
text = "Game Over"
align = 1
script = ExtResource( 7 )

[node name="Paused" type="Label" parent="Bg"]
visible = false
margin_left = 400.0
margin_top = 60.0
margin_right = 507.0
margin_bottom = 74.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.439216, 1, 0.380392, 1 )
text = "Paused"
align = 1
script = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 500, 450 )

[connection signal="pause" from="PauseCountroller" to="Bg/Paused" method="_on_PauseCountroller_pause"]
[connection signal="difficulty_increase" from="Generator" to="Bg/DifficultyLevel" method="_on_Generator_difficulty_increase"]
[connection signal="timeout" from="Generator/Timer" to="Generator" method="_on_Timer_timeout"]
[connection signal="player_died" from="Player" to="Generator" method="_on_Player_player_died"]
[connection signal="player_died" from="Player" to="Bg/GameOver" method="_on_Player_player_died"]
[connection signal="start_game" from="Player" to="Generator/InitStar" method="_on_Player_start_game"]
[connection signal="start_game" from="Player" to="Bg/DifficultyLevel" method="_on_Player_start_game"]
